tests/neg/dynamicApplyDynamicTest3.scala
import scala.language.dynamics

class Foo extends scala.Dynamic

object DynamicTest {
  new Foo().bazApply _  // error
}
